alteração no menu

--- a/www/views/home/init.html
+++ b/www/views/home/init.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row openDiv">
     <div class="generalHome">
         <div class="carouselImages">
             <div class="carousel carousel-slider center" data-indicators="true">
@@ -19,6 +19,46 @@
                 <div class="carousel-item blue white-text" href="#four!">
                     <h2>Fourth Panel</h2>
                     <p class="white-text">This is your fourth panel</p>
+                </div>
+            </div>
+        </div>
+        <div class="secondPart">
+
+            <div class="center">
+                <label class="fs-5 title">Ultimas noticias</label>
+            </div>
+            <div class="divider mainDivider"></div>
+
+            <div class="main">
+                <div class="post">
+                    <div class="when">
+                        <label>20/05/2019 13:40</label>
+                    </div>
+                    <span class="titlePost">Concursos</span>
+                    <br>
+                    <span class="mainPost">
+                        A FUNASA (Fundação Nacional de Saúde) já pediu autorização ao Ministério competente para abertura de concurso público. No total, são esperadas mais de 450 vagas para esse órgão  federal.
+                    </span>
+                </div>
+                <div class="post">
+                    <div class="when">
+                        <label>07/02/2019 19:12</label>
+                    </div>
+                    <span class="titlePost">Emenda constitucional</span>
+                    <br>
+                    <span class="mainPost">
+                        é uma alteração feita em determinado texto específico presente na Constituição de um Estado, alterando as bases da lei em determinada matéria.
+                    </span>
+                </div>
+                <div class="post">
+                    <div class="when">
+                        <label>07/02/2019 19:12</label>
+                    </div>
+                    <span class="titlePost">Emenda constitucional</span>
+                    <br>
+                    <span class="mainPost">
+                        é uma alteração feita em determinado texto específico presente na Constituição de um Estado, alterando as bases da lei em determinada matéria.
+                    </span>
                 </div>
             </div>
         </div>
