--- a/www/views/menu/main.html
+++ b/www/views/menu/main.html
@@ -2,7 +2,7 @@
     <ul id="slide-out" class="side-nav">
         <li><div class="user-view">
             <div class="background">
-                <img src="webfiles/img/logo/logo1.png">
+                <img src="webfiles/img/logo/logobranco.png">
             </div>
             <a href="#!user"><img class="circle" src="http://clipart-library.com/images/8i6oer5KT.png"></a>
             <a href="#!name"><span class="white-text name">Dr. Regnobertho</span></a>
@@ -17,7 +17,7 @@
         <li id="openConfig"><a href="#!"><i class="material-icons">build</i>Configurações</a></li>
         <!--<li><a href="#!"></a></li>-->
         <li><div class="divider"></div></li>
-        <li><a class="subheader" href="#!"><i class="material-icons">exit_to_app</i>Sair</a></li>
+        <li id="getOutApp"><a class="subheader" href="#!"><i class="material-icons">exit_to_app</i>Sair</a></li>
         <div class="footer">
             <label>&copy; Desenvolvido por JusHelp</label>
         </div>
